--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# vscode config
+/.vscode
+
+# history files
+/.history
+
+# target
+/target
+
+# ui png
+ui-try.png
